templates/network.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "vnetName": {
            "type": "string",
            "metadata": {
                "description": "Name of the Virtual Network"
            }
        },
        "location": {
            "type": "string",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "environment": {
            "type": "string",
            "allowedValues": ["dev", "prod"],
            "metadata": {
                "description": "Environment type"
            }
        }
    },
    "variables": {
        "subnetName": "app-subnet",
        "subnetPrefix": "10.0.1.0/24",
        "vnetAddressPrefix": "10.0.0.0/16",
        "nsgName": "[concat(parameters('vnetName'), '-nsg')]"
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2022-05-01",
            "name": "[variables('nsgName')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowAppServiceInbound",
                        "properties": {
                            "priority": 100,
                            "protocol": "Tcp",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourceAddressPrefix": "10.0.0.0/16",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "10.0.1.0/24",
                            "destinationPortRange": "80"
                        }
                    },
                    {
                        "name": "AllowAppServiceOutbound",
                        "properties": {
                            "priority": 100,
                            "protocol": "Tcp",
                            "access": "Allow",
                            "direction": "Outbound",
                            "sourceAddressPrefix": "10.0.1.0/24",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "10.0.0.0/16",
                            "destinationPortRange": "443"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2022-05-01",
            "name": "[parameters('vnetName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('vnetAddressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('subnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('subnetPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
                            },
                            "delegations": [
                                {
                                    "name": "app-service-delegation",
                                    "properties": {
                                        "serviceName": "Microsoft.Web/serverFarms"
                                    }
                                }
                            ],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Disabled"
                        }
                    }
                ],
                "enableDdosProtection": "[if(equals(parameters('environment'), 'prod'), bool('true'), bool('false')]"
            }
        }
    ],
    "outputs": {
        "vnetId": {
            "type": "string",
            "value": "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
        },
        "subnetId": {
            "type": "string",
            "value": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), variables('subnetName'))]"
        },
        "nsgId": {
            "type": "string",
            "value": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
        }
    }
}
